# dotty-and-spotty

./: .gitignore  0_fill_screen.py  1_draw_circle.py  2_move_circle.py  README.md  core.py  main.py  main_old.py  pyproject.toml
