[tool.poetry]
name = "dotty-and-spotty"
version = "0.1.0"
description = ""
authors = ["Peter Stuart <peter.stuart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
